--- a/styles/main.css
+++ b/styles/main.css
@@ -23,6 +23,34 @@
   animation-duration: 2s;
 }
 
+ul li {
+  list-style: none;
+}
+
+nav {
+  margin: 0;
+}
+
+nav ul li {
+  margin-left: -40px;
+}
+
+nav > ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+nav > ul > li > ul {
+  position: absolute;
+  left: 0;
+  visibility: hidden;
+}
+
+nav > ul > li:hover > ul {
+  visibility: visible;
+}
+
 header {
   text-align: right;
   background-color: rgb(57, 180, 217);
@@ -30,6 +58,7 @@ header {
 
 main {
   color: rgb(74, 74, 74);
+  padding-left: 5px;
 }
 
 a {
