--- a/styles/main.css
+++ b/styles/main.css
@@ -33,8 +33,23 @@
   }
 }
 
-.menu-box {
-  display: none;
+.show {
+  visibility: visible;
+  opacity: 1;
+  animation-name: opening-menu;
+  animation-duration: .2s;
+}
+
+@keyframes opening-menu {
+  from {
+    opacity: 0;
+    transform: translateY(-25%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 ul li {
@@ -51,12 +66,14 @@ nav {
   position: absolute;
   top: 90px;
   left: 50%;
+  visibility: hidden;
+  opacity: 0;
 }
 
 nav a {
   background-color: rgb(238, 162, 58);
   display: block;
-  line-height: 25px;
+  line-height: 30px;
   margin: 5px;
   width: 125px;
   padding: 5px;
